# crypto-info

./: .gitignore  Procfile  pyproject.toml  requirements.txt
cryptosite/: manage.py
cryptosite/core/: urls.py
cryptosite/core/static/: style.css
cryptosite/core/templates/: base.html  index.html
cryptosite/cryptosite/: asgi.py  settings.py  urls.py  wsgi.py
