[tool.poetry]
name = "crypto-info"
version = "0.1.0"
authors = ["Andre Puttini <andreputtinii@gmail.com>"]
description = ""

[tool.poetry.dependencies]
python = "^3.13"
django = "6.0.1"
asgiref = "3.11.0"
requests = "2.32.5"
sqlparse = "0.5.5"
tzdata = "2025.3"
whitenoise = "6.5.0"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
